--- a/src/main/resources/templates/games/games.html
+++ b/src/main/resources/templates/games/games.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="www.thymeleaf.org" th:replace="~{fragments/layout :: base('Game', ~{::body}, _, _, _)}">
+<html xmlns:th="www.thymeleaf.org" th:replace="~{fragments/layout :: base('Games', ~{::body}, _, _, _)}">
 <head>
 <meta charset="utf-8">
 </head>
