--- a/src/main/resources/templates/subjects/subjects.html
+++ b/src/main/resources/templates/subjects/subjects.html
@@ -1,22 +1,28 @@
 <!DOCTYPE html>
-<html xmlns:th="www.thymeleaf.org"
-	th:replace="~{fragments/layout :: base(${course.code}, ~{::body}, ~{::link}, _, _)}">
+<html xmlns:th="www.thymeleaf.org" th:replace="~{fragments/layout :: base('ADS', ~{::body}, ~{::link}, _, _)}">
+
 <head>
-<meta charset="utf-8">
-<link rel="stylesheet" type="text/css" th:href="@{/css/btn-card.css}">
+	<meta charset="utf-8">
+	<link rel="stylesheet" type="text/css" th:href="@{/css/btn-card.css}">
 </head>
+
 <body>
 	<div class="row">
 		<div class="card m-0 ps-0 bg-dark text-white">
 			<div class="row">
 				<div class="col-md-4">
-					<img th:src="${course.imageUrl}" class="img-fluid">
+					<img src="http://www.fatecsp.br/img/ti.jpg" class="img-fluid">
 				</div>
 				<div class="col-md-8">
 					<div class="card-body">
-						<h3 class="card-title fw-bolder" th:text="${course.name}">Card title</h3>
-						<p class="card-text" th:text="${course.description}">This is a wider card with supporting text below
-							as a natural lead-in to additional content. This content is a little bit longer.</p>
+						<h3 class="card-title fw-bolder">Análise e Desenvolvimento de Sistemas</h3>
+						<p class="card-text">O Tecnólogo em Análise e Desenvolvimento de Sistemas analisa, projeta,
+							documenta, especifica, testa, implanta e mantém sistemas computacionais de informação. Esse
+							profissional trabalha, também, com ferramentas computacionais, equipamentos de informática e
+							metodologia de projetos na produção de sistemas. Raciocínio lógico, emprego de linguagens de
+							programação e de metodologias de construção de projetos, preocupação com a qualidade,
+							usabilidade, robustez, integridade e segurança de programas computacionais são fundamentais
+							à atuação desse profissional.</p>
 					</div>
 				</div>
 			</div>
@@ -102,9 +108,9 @@
 	</div>
 
 	<script type="text/javascript" th:inline="javascript">
-		var subjects = /*[[${subjects}]]*/null;
+		let subjects = /*[[${subjects}]]*/null;
 	</script>
-
-	<script type="text/javascript" th:src="@{/js/course-details.js}"></script>
+	
+	<script type="text/javascript" th:src="@{/js/subjects.js}"></script>
 </body>
 </html>
