--- a/src/main/resources/templates/games/waiting-room.html
+++ b/src/main/resources/templates/games/waiting-room.html
@@ -22,7 +22,7 @@
 				</div>
 
 				<div class="d-flex justify-content-end">
-					<form action="#" method="post" th:action="@{/game/leave}">
+					<form action="#" method="post" th:action="@{/games/leave}">
 						<button type="submit" class="btn btn-outline-light">Sair da sala</button>
 					</form>
 				</div>
