--- a/src/main/resources/templates/subjects/subjects.html
+++ b/src/main/resources/templates/subjects/subjects.html
@@ -11,7 +11,7 @@
 		<div class="card m-0 ps-0 bg-dark text-white">
 			<div class="row">
 				<div class="col-md-4">
-					<img src="http://www.fatecsp.br/img/ti.jpg" class="img-fluid">
+					<img src="../images/ads.jpg" th:src="@{/images/ads.jpg}" class="img-fluid">
 				</div>
 				<div class="col-md-8">
 					<div class="card-body">
