--- a/src/main/resources/templates/fragments/layout.html
+++ b/src/main/resources/templates/fragments/layout.html
@@ -18,5 +18,13 @@
 
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
 		integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
+		
+	<script th:src="@{/js/notifications.js}"></script>
+	<script th:src="@{/js/timeago/timeago.js}"></script>
+	<script th:src="@{/js/timeago/jquery.timeago.pt-br.js}"></script>
+	
+	<script type="text/javascript">
+		$("time.timeago").timeago();	
+	</script>
 </body>
 </html>
