Improve verification of Test answers

--- a/src/main/resources/templates/subjects/topic-details.html
+++ b/src/main/resources/templates/subjects/topic-details.html
@@ -175,13 +175,13 @@
 														th:field="*{alternatives[__${itemStat.index}__].description}"
 														placeholder="Alternativa" required>Alternativa 1</textarea>
 													<input type="text" class="form-control"
-														th:field="*{alternatives[__${itemStat.index}__].feedback}"
+														th:field="*{alternatives[__${itemStat.index}__].feedback.description}"
 														placeholder="Feedback da alternativa">
 												</div>
 												<div class="form-check me-3">
 													<input type="checkbox"
 														class="is-correct-alternative form-check-input"
-														th:field="*{alternatives[__${itemStat.index}__].correct}">
+														th:field="*{alternatives[__${itemStat.index}__].feedback.correct}">
 												</div>
 												<button type="button"
 													class="remove-alternative btn btn-outline-danger btn-sm">
